@@ -1,3 +1,10 @@
+2012-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* NEWS: 2.0.2 release.
+	* theme.py, com.googlecode.gfeedline.gschema.xml.in: Changed the
+	  name of default theme.
+	* output.py: Fixed unread flags.
+
 2012-11-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.0.1 release.
